--- a/iOSEngineerCodeCheck/Base.lproj/Main.storyboard
+++ b/iOSEngineerCodeCheck/Base.lproj/Main.storyboard
@@ -54,8 +54,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="ktq-eC-ZBq"/>
                     <connections>
-                        <outlet property="SchBr" destination="6rq-CD-Hob" id="3gq-mK-4M3"/>
-                        <outlet property="searchBar" destination="6rq-CD-Hob" id="nbA-rp-4MX"/>
+                        <outlet property="searchBar" destination="6rq-CD-Hob" id="CBd-Pj-bkm"/>
                         <segue destination="AHY-RL-7mG" kind="show" identifier="Detail" id="qqd-8W-4W1"/>
                     </connections>
                 </tableViewController>
@@ -138,16 +137,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="J6o-vL-S1z"/>
                     <connections>
-                        <outlet property="FrksLbl" destination="ZMv-4f-X2V" id="i84-sH-c5t"/>
-                        <outlet property="ImgView" destination="Iim-eb-8Ad" id="dmH-tP-ZuI"/>
-                        <outlet property="IsssLbl" destination="dzg-K8-h2L" id="L0v-sy-cD4"/>
-                        <outlet property="LangLbl" destination="s3M-QO-Kom" id="x3L-gZ-aZZ"/>
-                        <outlet property="StrsLbl" destination="0WZ-UA-R8O" id="gYb-gI-iMf"/>
-                        <outlet property="TtlLbl" destination="4q1-pG-WSB" id="UQ0-5D-rWe"/>
-                        <outlet property="WchsLbl" destination="lQC-lo-IqN" id="Drg-Jv-iUh"/>
                         <outlet property="forksLabel" destination="ZMv-4f-X2V" id="llV-vF-IG8"/>
                         <outlet property="imageView" destination="Iim-eb-8Ad" id="pcR-fr-Ho0"/>
-                        <outlet property="issueLabel" destination="dzg-K8-h2L" id="mmC-O9-rJF"/>
+                        <outlet property="issueLabel" destination="dzg-K8-h2L" id="Iql-rO-AhR"/>
                         <outlet property="languageLabel" destination="s3M-QO-Kom" id="tgU-v1-xep"/>
                         <outlet property="starsLabel" destination="0WZ-UA-R8O" id="fs7-rj-ZfT"/>
                         <outlet property="titleLabel" destination="4q1-pG-WSB" id="oSN-6m-lID"/>
